# stat-scraping

./: .gitignore  Ownership.ipynb  README.md  fantasy-pros.py  fantasy_pros.py  output1.html  output69.html  ownership-curves.py  ownership_curve.py  pod_0702.py  preseason_60.py  pyproject.toml  requirements.txt  season-wrap.py  stat-scraping.py  stat_scraping.py
.ipynb_checkpoints/: Ownership-checkpoint.ipynb
data/: 2023_preseason_Ranks.csv  batter_dict.csv  fantasy_pros_ranks_elig_20240226.csv  fantasy_pros_ranks_elig_20240302.csv  fantasy_pros_ranks_elig_20240305.csv  fantasy_pros_ranks_elig_20240318.csv  fantasy_pros_ranks_elig_20240401.csv  fantasy_pros_ranks_elig_20240404.csv  fantasy_pros_ranks_elig_20240408.csv  fantasy_pros_ranks_elig_20240411.csv  fantasy_pros_ranks_elig_20240413.csv  fantasy_pros_ranks_elig_20240414.csv  fantasy_pros_ranks_elig_20240415.csv  fantasy_pros_ranks_elig_20240417.csv  fantasy_pros_ranks_elig_20240419.csv  fantasy_pros_ranks_elig_20240426.csv  fantasy_pros_ranks_elig_20240429.csv  fantasy_pros_ranks_elig_20240430.csv  fantasy_pros_ranks_elig_20240505.csv  fantasy_pros_ranks_elig_20240515.csv  fantasy_pros_ranks_elig_20240516.csv  fantasy_pros_ranks_elig_20240518.csv  fp_proj_hit_20220519.csv  fp_proj_hit_20220520.csv  fp_proj_hit_20220523.csv  fp_proj_hit_20220526.csv  fp_proj_hit_20220528.csv  fp_proj_hit_20220531.csv  fp_proj_hit_20220601.csv  fp_proj_hit_20220605.csv  fp_proj_hit_20220606.csv  fp_proj_hit_20220607.csv  fp_proj_hit_20220608.csv  fp_proj_hit_20220609.csv  fp_proj_hit_20220610.csv  fp_proj_hit_20220612.csv  (+981 more)
(+822 files in other folders)
